--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "name": "csa499",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
