--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "connect-flash": "^0.1.1",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-flash": "^0.0.2",
-    "express-mysql-session": "^3.0.0",
-    "express-session": "^1.17.3",
-    "hbs": "^4.2.0",
-    "mysql": "^2.18.1",
-    "nodemon": "^3.0.1",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
-  },
   "name": "csa499",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "The source code or any documentation that needs to be shared so that we can collaborate on a project.",
+  "type": "module",
+  "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "dev": "npx nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "body-parser": "^2.0.0-beta.1",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^5.0.0-beta.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.1",
+    "nodemon": "^3.0.1",
+    "ssh2": "^1.14.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "express-flash": "^0.0.2",
+    "express-mysql-session": "^3.0.0",
+    "express-session": "^1.17.3",
+    "hbs": "^4.2.0",
+    "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1"
+  }
+
 }
