--- a/package.json
+++ b/package.json
@@ -12,22 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^2.0.0-beta.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^5.0.0-beta.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.1",
-    "nodemon": "^3.0.1",
-    "ssh2": "^1.14.0",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
     "express-flash": "^0.0.2",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
-    "bcrypt": "^5.1.1",
-    "connect-flash": "^0.1.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "ssh2": "^1.14.0"
   }
-
 }
