--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
-    "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
-    "nodemon": "^3.0.1",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "ssh2": "^1.14.0"
+    "nodemon": "^3.0.1"
   }
 }
